ver 0.9.1_fixed index directory

--- a/html/teoria/teoria.html
+++ b/html/teoria/teoria.html
@@ -21,7 +21,7 @@
                 <img src="..\..\img\logo.webp" alt="" id="logo-image">
             </div>
             <div class="col-lg-2 col-md-2 col-sm-6">
-                <a href="..\index.html"><b>Home</b></a>
+                <a href="..\..\index.html"><b>Home</b></a>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-6">
                 <a href=""><b>Teoria</b></a>
