--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="..\css\bootstrap.css">
+        <link rel="stylesheet" href="css\bootstrap.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="..\css\style.css">
+        <link rel="stylesheet" href="css\style.css">
         <link href="https://fonts.googleapis.com/css2?family=Tuffy:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <title>Homepage</title>
     </head>
@@ -15,19 +15,19 @@
             <div class="background"></div>
             <header class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="..\img\logo.webp" alt="" id="logo-image">   
+                    <img src="img\logo.webp" alt="" id="logo-image">   
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-6">
                     <a href=""><b>Home</b></a>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-6">
-                    <a href="teoria\teoria.html"><b>Teoria</b></a>
+                    <a href="html\teoria\teoria.html"><b>Teoria</b></a>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-6">
-                    <a href="quiz\quiz.html"><b>Quiz</b></a>
+                    <a href="html\quiz\quiz.html"><b>Quiz</b></a>
                 </div>
                 <div class="col-lg-2 col-md- col-sm-6">
-                    <a href="contatti.html"><b>Contatti</b></a>
+                    <a href="html\contatti.html"><b>Contatti</b></a>
                 </div>
             </header>
             <main>
@@ -51,7 +51,7 @@
                 <div class="divisore"></div>
                 <div class="row example">
                     <div class="col-lg-5 col-md-5 col-sm-12">
-                        <img src="..\img\example1.png" alt="">
+                        <img src="img\example1.png" alt="">
                     </div>
                     <div class="col-lg-5 col-md-5 col-sm-12">
                         <h2>Impara i concetti della <span class="blue-text">teoria musicale</span></h2>
@@ -62,7 +62,7 @@
                         <h2>Mettiti alla prova con <span class="blue-text">quiz divertenti</span></h2>
                     </div>
                     <div class="col-lg-5 col-md-5 col-sm-12">
-                        <img src="..\img\example2.jpg" alt="">
+                        <img src="img\example2.jpg" alt="">
                     </div>
                 </div>
                 <div class="divisore"></div>
