--- a/html/contatti.html
+++ b/html/contatti.html
@@ -18,7 +18,7 @@
                     <img src="..\img\logo.webp" alt="" id="logo-image">   
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-6">
-                    <a href=""><b>Home</b></a>
+                    <a href="..\index.html"><b>Home</b></a>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-6">
                     <a href="teoria\teoria.html"><b>Teoria</b></a>
