--- a/html/quiz/quiz.html
+++ b/html/quiz/quiz.html
@@ -17,19 +17,19 @@
     <div class="container-fluid">
         <div class="background"></div>
         <header class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
+            <div class="col-lg-4 col-md-12 col-sm-12">
                 <img src="..\..\img\logo.webp" alt="" id="logo-image">
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-5">
+            <div class="col-lg-2 col-md-6 col-sm-5">
                 <a href="..\..\index.html"><b>Home</b></a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-5">
+            <div class="col-lg-2 col-md-6 col-sm-5">
                 <a href="..\teoria\teoria.html"><b>Teoria</b></a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-5">
+            <div class="col-lg-2 col-md-6 col-sm-5">
                 <a href=""><b>Quiz</b></a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-5">
+            <div class="col-lg-2 col-md-6 col-sm-5">
                 <a href="..\contatti.html"><b>Contatti</b></a>
             </div>
         </header>
@@ -38,11 +38,12 @@
             <div class="divisore"></div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 satin">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at quis iusto delectus quaerat vel ut ea
-                        sapiente corrupti nam voluptatum exercitationem illo obcaecati repellendus id eum, aliquid sequi. Minus!
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae voluptates recusandae repudiandae
-                        deleniti laboriosam porro tempore, voluptate aliquam tenetur magni ullam sequi esse placeat facere
-                        quibusdam. Cum veniam quasi ea.</p>
+                    <p><b>Benvenuto nella sezione Quiz!</b><br>
+                        Quì potrai verificare quanto hai appreso dalle lezioni di teoria musicale grazie a semplici
+                        domande a risposta multipla e vero/falso. <br><br>
+
+                        Ogni domanda è pensata per essere veloce, intuitiva e stimolante — il modo perfetto per consolidare
+                        ciò che hai imparato divertendoti!</p>
                 </div>
             </div>
             <div class="divisore"></div>
@@ -50,8 +51,8 @@
             <button id="start-btn" onclick="startQuiz()">Inizia il quiz</button>
             <div class="divisore"></div>
             <div>
-               <p id="result" class="satin-white"></p>
-               <div id="repeat-btn"></div>
+                <p id="result" class="satin-white"></p>
+                <div id="repeat-btn"></div>
             </div>
         </main>
         <footer class="row">
