--- a/html/teoria/teoria.html
+++ b/html/teoria/teoria.html
@@ -17,19 +17,19 @@
     <div class="container-fluid">
         <div class="background"></div>
         <header class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
+            <div class="col-lg-4 col-md-12 col-sm-12">
                 <img src="..\..\img\logo.webp" alt="" id="logo-image">
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-6">
+            <div class="col-lg-2 col-md-6 col-sm-6">
                 <a href="..\..\index.html"><b>Home</b></a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-6">
+            <div class="col-lg-2 col-md-6 col-sm-6">
                 <a href=""><b>Teoria</b></a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-6">
+            <div class="col-lg-2 col-md-6 col-sm-6">
                 <a href="..\quiz\quiz.html"><b>Quiz</b></a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-6">
+            <div class="col-lg-2 col-md-6 col-sm-6">
                 <a href="..\contatti.html"><b>Contatti</b></a>
             </div>
         </header>
@@ -38,9 +38,13 @@
             <div class="divisore"></div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 satin">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore quasi quia earum tempora enim
-                        eaque aliquid corporis modi, voluptas suscipit voluptate nam obcaecati veritatis quisquam
-                        architecto dignissimos voluptates minus optio.</p>
+                    <p>Di seguito troverai 4 brevi lezioni gratuite pensate per offrirti una base chiara e semplice di
+                        teoria musicale.
+                        Al termine delle lezioni, potrai mettere alla prova le tue conoscenze con un quiz
+                        interattivo.<br><br>
+
+                        Se hai dubbi, desideri ricevere approfondimenti personalizzati, oppure vuoi iscriverti ai nostri
+                        corsi, puoi compilare il form nella sezione <b>Contatti</b>: ti risponderemo il prima possibile!</p>
                 </div>
             </div>
             <div class="divisore"></div>
@@ -54,58 +58,35 @@
                 <div class="lezione col-lg-9 col-md-9 col-sm-12 satin" id="lezione-1">
                     <h2>Lezione 1</h2>
                     <h3>Le note musicali</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, architecto fugit impedit
-                        praesentium unde maxime, quo reprehenderit veniam laudantium error cum id earum voluptatem
-                        accusantium nemo repellendus? Alias, recusandae sit. Lorem ipsum dolor sit, amet consectetur
-                        adipisicing elit. Ullam facilis, nihil delectus molestiae ad sint sequi officia. Qui libero
-                        sequi illum rem, consequatur, voluptas nostrum quam voluptate officiis eveniet porro! Lorem,
-                        ipsum dolor sit amet consectetur adipisicing elit. Corrupti alias repudiandae molestias
-                        obcaecati omnis non! At sed id quaerat a ratione, unde obcaecati earum accusamus numquam.
-                        Facere, velit commodi! Quibusdam? Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Distinctio, esse. Repellendus minima ducimus minus iste, est quia eum nam, fugiat officia ipsa
-                        voluptas molestias velit facere nihil, corrupti culpa suscipit? Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Reprehenderit ab veritatis nesciunt adipisci libero commodi dicta
-                        itaque omnis. Error excepturi ea aspernatur quos, eaque cumque sapiente a laudantium sint et.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rem iste est, a, dolore
-                        asperiores animi sed porro tempore alias fugiat, odio culpa veritatis reiciendis. Corrupti
-                        necessitatibus dolores sint distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt voluptates provident odio fuga dolores veritatis obcaecati quae nobis unde sint ipsam,
-                        mollitia, saepe aperiam assumenda sapiente deserunt recusandae magnam tempora.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, architecto fugit impedit
-                        praesentium unde maxime, quo reprehenderit veniam laudantium error cum id earum voluptatem
-                        accusantium nemo repellendus? Alias, recusandae sit. Lorem ipsum dolor sit, amet consectetur
-                        adipisicing elit. Ullam facilis, nihil delectus molestiae ad sint sequi officia. Qui libero
-                        sequi illum rem, consequatur, voluptas nostrum quam voluptate officiis eveniet porro! Lorem,
-                        ipsum dolor sit amet consectetur adipisicing elit. Corrupti alias repudiandae molestias
-                        obcaecati omnis non! At sed id quaerat a ratione, unde obcaecati earum accusamus numquam.
-                        Facere, velit commodi! Quibusdam? Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Distinctio, esse. Repellendus minima ducimus minus iste, est quia eum nam, fugiat officia ipsa
-                        voluptas molestias velit facere nihil, corrupti culpa suscipit? Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Reprehenderit ab veritatis nesciunt adipisci libero commodi dicta
-                        itaque omnis. Error excepturi ea aspernatur quos, eaque cumque sapiente a laudantium sint et.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rem iste est, a, dolore
-                        asperiores animi sed porro tempore alias fugiat, odio culpa veritatis reiciendis. Corrupti
-                        necessitatibus dolores sint distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt voluptates provident odio fuga dolores veritatis obcaecati quae nobis unde sint ipsam,
-                        mollitia, saepe aperiam assumenda sapiente deserunt recusandae magnam tempora.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, architecto fugit impedit
-                        praesentium unde maxime, quo reprehenderit veniam laudantium error cum id earum voluptatem
-                        accusantium nemo repellendus? Alias, recusandae sit. Lorem ipsum dolor sit, amet consectetur
-                        adipisicing elit. Ullam facilis, nihil delectus molestiae ad sint sequi officia. Qui libero
-                        sequi illum rem, consequatur, voluptas nostrum quam voluptate officiis eveniet porro! Lorem,
-                        ipsum dolor sit amet consectetur adipisicing elit. Corrupti alias repudiandae molestias
-                        obcaecati omnis non! At sed id quaerat a ratione, unde obcaecati earum accusamus numquam.
-                        Facere, velit commodi! Quibusdam? Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Distinctio, esse. Repellendus minima ducimus minus iste, est quia eum nam, fugiat officia ipsa
-                        voluptas molestias velit facere nihil, corrupti culpa suscipit? Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Reprehenderit ab veritatis nesciunt adipisci libero commodi dicta
-                        itaque omnis. Error excepturi ea aspernatur quos, eaque cumque sapiente a laudantium sint et.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rem iste est, a, dolore
-                        asperiores animi sed porro tempore alias fugiat, odio culpa veritatis reiciendis. Corrupti
-                        necessitatibus dolores sint distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt voluptates provident odio fuga dolores veritatis obcaecati quae nobis unde sint ipsam,
-                        mollitia, saepe aperiam assumenda sapiente deserunt recusandae magnam tempora.
-                    </p>
+                    <div class="row">
+                        <div class="col-12">
+                            <p>La musica occidentale si basa su 7 note musicali, chiamate Do, Re, Mi, Fa, Sol, La e Si.
+                                Seguendo il sistema di notazione anglosassone, i nomi delle note (partendo dal do) sono:
+                                C, D, E, F, G, A, B. Queste note si ripetono ciclicamente in un sistema chiamato ottava.
+                                Infatti, dopo il Si, avremo un altro Do (però più acuto). In realtà, l'ottava contiene
+                                12 note, ma i nomi propri sono sempre 7. Su questo torneremo però nella prossima
+                                lezione. </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <img src="..\..\img\note.png" alt="" style="border-radius: 15px; width: 100%;">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <p><b>Come leggere le note</b></p>
+                            <p>Le note si scrivono su un insieme di cinque righe parallele chiamato <b>pentagramma</b>.
+                                La
+                                chiave, posta all'inizio del pentagramma, ci indica come leggere le note. La più comune
+                                è la <b>chiave di violino</b> (in inglese "<i>treble clef</i>"), la quale pone la nota
+                                Sol sulla seconda riga a partire dal
+                                basso. Le altre note vengono quindi ricavate di conseguenza, partendo dal Sol. <br><br>
+                                Le righe e gli spazi non sono sufficienti a rappresentare tutte le note. Esse possono
+                                quindi essere poste fuori dal pentagramma, ma è necessario applicare uno o più tagli
+                                addizionali per
+                                simulare l'aggiunta di nuove righe (nell'esempio a fianco, il middle C).
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="divisore"></div>
@@ -293,8 +274,8 @@
             </div>
             <div class="divisore"></div>
             <div class="row">
-                <div class="col-12">
-                    <h3><a href="#logo-image">Torna all'inizio</a></h3>
+                <div class="col-12 home-buttons">
+                    <a href="#logo-image"><b>Torna all'inizio</b></a>
                 </div>
             </div>
         </main>
