--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <body>
         <div class="container-fluid">
             <div class="background"></div>
-            <header class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12">
+            <header class="row" style="text-align: center;">
+                <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
                     <img src="img\logo.webp" alt="" id="logo-image">   
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-6">
+                <div class="col-lg-2 col-md-6 col-sm-6">
                     <a href=""><b>Home</b></a>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-6">
+                <div class="col-lg-2 col-md-6 col-sm-6">
                     <a href="html\teoria\teoria.html"><b>Teoria</b></a>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-6">
+                <div class="col-lg-2 col-md-6 col-sm-6">
                     <a href="html\quiz\quiz.html"><b>Quiz</b></a>
                 </div>
-                <div class="col-lg-2 col-md- col-sm-6">
+                <div class="col-lg-2 col-md-6 col-sm-6">
                     <a href="html\contatti.html"><b>Contatti</b></a>
                 </div>
             </header>
@@ -82,10 +82,10 @@
                     </div>
                     <div class="home-buttons row">
                         <div class="col-lg-3 col-md-6 col-sm-12" >
-                            <a href="teoria/teoria.html" id="theory-button"><b>Impara la teoria</b></a>
+                            <a href="html/teoria/teoria.html" id="theory-button"><b>Impara la teoria</b></a>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12" >
-                            <a href="quiz/quiz.html" id="quiz-button"><b>Vai ai quiz</b></a>
+                            <a href="html/quiz/quiz.html" id="quiz-button"><b>Vai al quiz</b></a>
                         </div>
                     </div>
             </main>
